--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-tsparticles": "^1.34.0",
     "webpack": "^5.51.0"
   },
   "devDependencies": {
